--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     <title>Quote Generator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="quote-box">
+      <h2>Quote of the Day</h2>
+      <blockquote>Loading...</blockquote>
+      <span>Loading...</span>
+      <div>
+        <button>New Quote</button>
+        <button>Tweet</button>
+      </div>
+    </div>
+  </body>
 </html>
